--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,9 @@
 </head>
 
 <body>
+  <header class="header">
+    <h1>Francisco <img src="./assets/img/burger.png" alt="hambúrger"> Lanches</h1>
+  </header>
 </body>
 
 </html>
