Crie menu de navegação

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,13 @@
 <body>
   <header class="header">
     <h1>Francisco <img src="./assets/img/burger.png" alt="hambúrger"> Lanches</h1>
+    <nav class="nav">
+      <ul>
+        <li><a href="#">Lanches</a></li>
+        <li><a href="#">Sobre Nós</a></li>
+        <li><a href="#">Contato</a></li>
+      </ul>
+    </nav>
   </header>
 </body>
 
