Crie menu dos lanches com preços

--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,76 @@
       </ul>
     </nav>
   </header>
+  <main>
+    <section class="menu">
+      <h2>Nossos Lanches</h2>
+      <section class="product">
+        <article>
+          <h3>Batata Frita</h3>
+          <figure>
+            <img src="./assets/img/french-fries.jpg" alt="Batata Frita">
+            <figcaption>R$: 6,00</figcaption>
+          </figure>
+        </article>
+        <article>
+          <h3>X-Frango</h3>
+          <figure>
+            <img src="./assets/img/chicken-burger.jpg" alt="X-Frango">
+            <figcaption>R$: 14,90</figcaption>
+          </figure>
+        </article>
+        <article>
+          <h3>X-Salada</h3>
+          <figure>
+            <img src="./assets/img/salad-burger.jpg" alt="X-Salada">
+            <figcaption>R$: 8,00</figcaption>
+          </figure>
+        </article>
+        <article>
+          <h3>Cheddar</h3>
+          <figure>
+            <img src="./assets/img/cheddar.jpg" alt="Cheddar">
+            <figcaption>R$: 9,00</figcaption>
+          </figure>
+        </article>
+        <article>
+          <h3>Big Tower</h3>
+          <figure>
+            <img src="./assets/img/big-tower.jpg" alt="Big Tower">
+            <figcaption>R$: 12,00</figcaption>
+          </figure>
+        </article>
+        <article>
+          <h3>Gourmet</h3>
+          <figure>
+            <img src="./assets/img/gourmet.jpg" alt="Gourmet">
+            <figcaption>R$: 18,00</figcaption>
+          </figure>
+        </article>
+        <article>
+          <h3>Pizza</h3>
+          <figure>
+            <img src="./assets/img/pizza.jpg" alt="Pizza">
+            <figcaption>R$: 22,00</figcaption>
+          </figure>
+        </article>
+        <article>
+          <h3>Refrigerante 350ml</h3>
+          <figure>
+            <img src="./assets/img/soda.jpg" alt="Refrigerante 350ml">
+            <figcaption>R$: 5,00</figcaption>
+          </figure>
+        </article>
+        <article>
+          <h3>Sucos 300ml</h3>
+          <figure>
+            <img src="./assets/img/juice.jpg" alt="Sucos">
+            <figcaption>R$: 3,50</figcaption>
+          </figure>
+        </article>
+      </section>
+    </section>
+  </main>
 </body>
 
 </html>
