Crie seção sobre

--- a/src/index.html
+++ b/src/index.html
@@ -89,6 +89,16 @@
         </article>
       </section>
     </section>
+    <section class="about">
+      <h2>Sobre</h2>
+      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio ullam repellat, dignissimos, nemo rem
+        doloremque quas autem non ipsum accusamus cupiditate atque doloribus at sint tempore libero debitis earum
+        facere?
+        Tempore voluptatem error reprehenderit modi reiciendis velit voluptate cumque vero, eos est porro impedit! Iste
+        ut commodi non error dolorem suscipit mollitia labore deleniti eius iusto, aliquid, neque, quibusdam iure!
+        Nam asperiores vel aliquam doloribus beatae voluptatibus, ex tempora repudiandae.
+      </p>
+    </section>
   </main>
 </body>
 
