Adicione mapa com localização

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
   <title>Francisco Lanches</title>
   <link href="https://fonts.googleapis.com/css2?family=Pangolin&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/leaflet.css">
 </head>
 
 <body>
@@ -98,8 +99,13 @@
         ut commodi non error dolorem suscipit mollitia labore deleniti eius iusto, aliquid, neque, quibusdam iure!
         Nam asperiores vel aliquam doloribus beatae voluptatibus, ex tempora repudiandae.
       </p>
+      <h3>Localização</h3>
+      <div class="map" id="map">Mapa</div>
     </section>
   </main>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/leaflet.js"></script>
+  <script type="text/javascript" src="./assets/js/map.js"></script>
 </body>
 
 </html>
