--- a/src/index.html
+++ b/src/index.html
@@ -15,14 +15,14 @@
     <h1>Francisco <img src="./assets/img/burger.png" alt="hambúrger"> Lanches</h1>
     <nav class="nav">
       <ul>
-        <li><a href="#">Lanches</a></li>
-        <li><a href="#">Sobre Nós</a></li>
-        <li><a href="#">Contato</a></li>
+        <li><a href="#menu">Lanches</a></li>
+        <li><a href="#about">Sobre Nós</a></li>
+        <li><a href="#contact">Contato</a></li>
       </ul>
     </nav>
   </header>
   <main>
-    <section class="menu">
+    <section class="menu" id="menu">
       <h2>Nossos Lanches</h2>
       <section class="product">
         <article>
@@ -90,7 +90,7 @@
         </article>
       </section>
     </section>
-    <section class="about">
+    <section class="about" id="about">
       <h2>Sobre</h2>
       <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio ullam repellat, dignissimos, nemo rem
         doloremque quas autem non ipsum accusamus cupiditate atque doloribus at sint tempore libero debitis earum
@@ -102,7 +102,7 @@
       <h3>Localização</h3>
       <div class="map" id="map">Mapa</div>
     </section>
-    <section class="contact">
+    <section class="contact" id="contact">
       <h2>Contato</h2>
       <form class="group-form" method="POST" action="/">
         <label for="name">Nome</label>
