Crie botão voltar ao topo

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <header class="header">
+  <header class="header" id="top">
     <h1>Francisco <img src="./assets/img/burger.png" alt="hambúrger"> Lanches</h1>
     <nav class="nav">
       <ul>
@@ -116,6 +116,7 @@
       </form>
     </section>
   </main>
+  <a class="up-arrow" href="#top"></a>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/leaflet.js"></script>
   <script type="text/javascript" src="./assets/js/map.js"></script>
