--- a/src/index.html
+++ b/src/index.html
@@ -120,6 +120,7 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/leaflet.js"></script>
   <script type="text/javascript" src="./assets/js/map.js"></script>
+  <script type="text/javascript" src="./assets/js/scroll-back-top.js"></script>
 </body>
 
 </html>
