Adicone informações para as entregas dos lanches

--- a/src/index.html
+++ b/src/index.html
@@ -116,6 +116,16 @@
       </form>
     </section>
   </main>
+  <aside class="delivery">
+    <div class="phone">
+      <p title="Ligue e peça o seu lanche">
+        <a href="https://api.whatsapp.com/send?phone=55799999999999">
+          <img src="./assets/img/whatsapp.png" alt="Whatsapp">
+          (79) 99999-9999</a>
+      </p>
+    </div>
+    <p title="Entregamos na sua casa!">Entregamos na sua casa!</p>
+  </aside>
   <a class="up-arrow" href="#top"></a>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/leaflet.js"></script>
