Adicone imagem animada na informação da entrega

--- a/src/index.html
+++ b/src/index.html
@@ -125,6 +125,7 @@
       </p>
     </div>
     <p title="Entregamos na sua casa!">Entregamos na sua casa!</p>
+    <img class="motorcycle" src="assets/img/motorcycle.svg">
   </aside>
   <a class="up-arrow" href="#top"></a>
 
